# clarity

./: .clippy.toml  .gitignore  AGENT11_DOCS_REPORT.md  AGENT11_EXECUTION_REPORT.md  AGENT9_PERFORMANCE_REPORT.md  AGENTS.md  BEADS_QUICK_REFERENCE.md  CONTINUOUS_IMPROVEMENT_BEADS.md  Cargo.toml  DOCUMENTATION_BEADS.md  PERFORMANCE_BEADS.md  QA_GATEKEEPER_17_REPORT.md  README.md  REMAINING_WORK_BEADS.md  ROUND3_BEADS.md  ROUND4_BEADS.md  SWARM_AGENT11_REPORT.md  SWARM_FINAL_REPORT.md  SWARM_ROUND2_BEADS.md  TEST_COVERAGE_REPORT.md  UUID_OPTIMIZATION_SUMMARY.md  bd-2pj-SETTINGS_UI_SUMMARY.md  bd-8sw-IMPLEMENTATION_SUMMARY.md  rustfmt.toml  work-all-beads-simple.md  work-all-beads.md
.bead-progress/bd-10g-responsive-design/: implementation-summary.md
.bead-progress/bd-3tq/: progress.md
.bead-progress/clarity-20260204030233-wpd5r1zr/: progress.txt
.beads/: beads.db.backup  issues.jsonl
.beads/schemas/: clarity-20260204021202-dkawgf0m.cue  clarity-20260204021433-fzzdfay6.cue
.beads/schemas/clarity-20260204021433-0ri2ihxf/: implementation.cue
.github/workflows/: ci.yml
.jjconflict-base-0/: .gitignore  ralph-bead-loop-enhanced.sh  ralph-bead-loop.sh
.jjconflict-base-0/.beads/: issues.jsonl
.jjconflict-base-0/.beads/schemas/: clarity-20260204021433-2drazeo9.cue  clarity-20260204021433-kikoxqh1.cue
.jjconflict-base-0/clarity-server/src/: main.rs
.jjconflict-base-0/tdd15-clarity-20260204030233-iy2kvlum/src/: lib.rs
.jjconflict-base-1/.moon/: tasks.yml  toolchain.yml
.jjconflict-base-1/.zjj/: state.db
.jjconflict-base-1/clarity-client/tests/: responsive_design_test.rs
.jjconflict-side-0/.beads/: issues.jsonl
.jjconflict-side-0/.ralph/: ralph-loop.state.json
.jjconflict-side-0/.zjj/: state.db
.jjconflict-side-0/clarity-core/src/db/: models.rs
.jjconflict-side-1/: README.md
.jjconflict-side-1/.ralph/: ralph-history.json  ralph-tasks.md
.jjconflict-side-1/clarity-client/: Cargo.toml
.jjconflict-side-1/clarity-core/src/: lib.rs
.jjconflict-side-1/clarity-core/src/db/: pool.rs
.jjconflict-side-1/clarity-core/src/test_utils/: mod.rs
.jjconflict-side-2/: Cargo.toml
.jjconflict-side-2/.bead-progress/bd-10g-responsive-design/: progress.md
.jjconflict-side-2/.beads/: issues.jsonl
.jjconflict-side-2/.ralph/: ralph-loop.state.json
.jjconflict-side-2/.zjj/: state.db
.jjconflict-side-2/clarity-core/src/: error.rs
.jjconflict-side-2/clarity-core/src/db/tests/: models_test.rs
.jjconflict-side-2/clarity-server/tests/: websocket_tests.rs
.moon/: tasks.yml  workspace.yml
.moon/cache/: runReport.json
.moon/cache/states/: installDeps-rust.json  moonVersionCheck.json  projectsBuildDataV1.json  setupToolchain-rust-1.80.0.json  workspaceGraph.json
.moon/cache/states/clarity-client/: snapshot.json
.moon/cache/states/clarity-client/check/: lastRun.json
.moon/cache/states/clarity-client/clippy/: lastRun.json
.moon/cache/states/clarity-client/fmt/: lastRun.json
.moon/cache/states/clarity-client/fmt-fix/: lastRun.json
.moon/cache/states/clarity-client/quick/: lastRun.json
.moon/cache/states/clarity-client/test/: lastRun.json
.moon/cache/states/clarity-client/test-doc/: lastRun.json
.moon/cache/states/clarity-core/: snapshot.json
.moon/cache/states/clarity-core/check/: lastRun.json
.moon/cache/states/clarity-core/clippy/: lastRun.json
.moon/cache/states/clarity-core/fmt/: lastRun.json
.moon/cache/states/clarity-core/fmt-fix/: lastRun.json
.moon/cache/states/clarity-core/quick/: lastRun.json
.moon/cache/states/clarity-core/test/: lastRun.json
.moon/cache/states/clarity-core/test-doc/: lastRun.json
.moon/cache/states/clarity-server/: snapshot.json
.moon/cache/states/clarity-server/check/: lastRun.json
.moon/cache/states/clarity-server/clippy/: lastRun.json
.moon/cache/states/clarity-server/fmt/: lastRun.json
.moon/cache/states/clarity-server/fmt-fix/: lastRun.json
.moon/scripts/: pgo-workload.sh
.ralph/: ralph-history.json  ralph-loop.state.json  ralph-tasks.md
.sqlx/: config.json
.tdd15-cache/: plan.md  research.json
.zjj/: state.db
.zjj/workspaces/bd-26p/: .ai-instructions.md  work-all-beads-tdd15.md
.zjj/workspaces/bd-26p/.jj/: repo
.zjj/workspaces/bd-26p/.zjj/: HEARTBEAT.md
clarity-client/: ASSET_MANAGEMENT.md  Cargo.toml  README.md  dx.toml
clarity-client/assets/: responsive.css
clarity-client/assets/icons/: create_icons.sh
clarity-client/public/: style.css
clarity-client/src/: analysis.rs  analysis_types.rs  app.rs  assets.rs  beads.rs  desktop_menu.rs  desktop_opt.rs  launcher.rs  lazy_init.rs  lib.rs  main.rs  memory.rs  window_state.rs
clarity-client/src/api/: client.rs  mod.rs  types.rs
clarity-client/tests/: ASSET_BUNDLING_TEST_REPORT.md  asset_bundling_test.rs  desktop_binary_test.rs  integration_test.rs  responsive_design_test.rs  zero_unwrap_tests.rs
clarity-core/: .env.example.test  Cargo.toml  DB_IMPLEMENTATION.md  INTEGRATION_TESTS.md  docker-compose.test.yml  run-integration-tests.sh
clarity-core/assets/: bundled.db
clarity-core/migrations/: 001_initial_schema.sql
clarity-core/src/: error.rs  formatter.rs  interview.rs  json_formatter.rs  lib.rs  path_utils.rs  progress.rs  quality.rs  schema_registry.rs  session.rs  types.rs  validation.rs
clarity-core/src/db/: bundled.rs  cache.rs  error.rs  managed_pool.rs  managed_pool.rs.disabled  migrate.rs  mod.rs  models.rs  pool.rs  repository.rs  sqlite_pool.rs
clarity-core/src/db/tests/: integration_test.rs  mod.rs  models_test.rs
clarity-core/src/types/: planning.rs  question.rs
clarity-core/tests/: build_optimization_test.rs  quality_types_test.rs  question_types_test.rs  zero_unwrap_tests.rs
clarity-server/: Cargo.toml
clarity-server/src/: error_tests.rs  main.rs  server_tests.rs
clarity-server/src/api/: beads.rs  health.rs  mod.rs  sessions.rs
clarity-server/tests/: allocator_test.rs  websocket_tests.rs  zero_unwrap_tests.rs
docs/: BUILD_OPTIMIZATION.md  Bd-2dj-Test-Lint-Summary.md  TESTING.md  TEST_TEMPLATE.rs  workspace-setup-summary.md  zero-unwrap-philosophy.md
(+10 files in other folders)
