[workspace]
members = [
    "clarity-core",
    "clarity-server",
    "clarity-client",
]
resolver = "2"

# Zero-unwrap philosophy: Enforce strict error handling via compiler lints
[workspace.lints.rust]
# Warn about unused results (helps catch ignored errors)
unused_results = "warn"
# Warn about missing documentation for public items
missing_docs = "warn"
# Warn about deprecated items
deprecated = "warn"

[workspace.lints.clippy]
# FORBID: unwrap() and expect() - core of zero-unwrap philosophy
unwrap_used = "deny"
expect_used = "deny"
# FORBID: panic in production code
panic = "deny"
todo = "warn"
unimplemented = "warn"
# ENFORCE: Result types and proper error handling
result_large_err = "warn"
# ENFORCE: Functional patterns
or_fun_call = "warn"
expect_fun_call = "warn"
# ENFORCE: Code quality
cognitive_complexity = "warn"
too_many_arguments = "warn"
# ENFORCE: Error messages must be meaningful
unwrap_in_result = "deny"
# ALLOW: In tests, we may use unwrap for test data (but still prefer Result)
#[cfg(test)]
#unwrap_used = "warn"
#[cfg(test)]
#expect_used = "warn"

[workspace.package]
version = "0.1.0-dev"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/clarity"
authors = ["Your Name <you@example.com>"]

[workspace.dependencies]
dioxus = { version = "0.7.3", features = ["fullstack"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "json", "migrate"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
# TODO: Re-enable deadpool dependencies when managed_pool is re-enabled
# deadpool-postgres = "0.14"
# deadpool-sqlite = { version = "0.7", features = ["bundled"] }
tempfile = "3.10"
moka = { version = "0.12", features = ["future"] }
mimalloc = { version = "0.1", default-features = false }

# ============================================================================
# BUILD OPTIMIZATION PROFILES
# ============================================================================
# This configuration implements Release Build Optimization (LTO + PGO)
# See bead bd-2m1 for details and test coverage.

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
strip = true

# Alternative release profile for faster CI builds (thin LTO)
[profile.ci]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 16
strip = true

# Profile for PGO instrumentation (see .moon/tasks.yml for workflow)
[profile.pgo-instrument]
inherits = "release"
opt-level = 3
debug = true
lto = "thin"
strip = false

# Profile for PGO optimized builds (after profiling)
[profile.pgo-optimized]
inherits = "release"
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
strip = true

