[workspace]
members = [
    "clarity-core",
    "clarity-server",
    "clarity-client",
]
resolver = "2"

# Zero-unwrap philosophy: Enforce strict error handling via compiler lints
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"
dead_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
# Zero unwrap law - COMPILE ERRORS (relaxed in tests)
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

# Quality enforcement (with priority)
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Specific allows
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"
type_complexity = "allow"
return_self_not_must_use = "allow"
trivially_copy_pass_by_ref = "allow"
map_unwrap_or = "allow"

[workspace.package]
version = "0.1.0-dev"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/clarity"
authors = ["Your Name <you@example.com>"]

[workspace.dependencies]
dioxus = { version = "0.7.3", features = ["fullstack"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "json", "migrate"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
deadpool-postgres = "0.14"
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3.10"
moka = { version = "0.12", features = ["future"] }
mimalloc = { version = "0.1", default-features = false }

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
strip = true
