[workspace]
members = [
    "clarity-core",
    "clarity-server",
    "clarity-client",
]
resolver = "2"

[workspace.package]
version = "0.1.0-dev"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/clarity"
authors = ["Your Name <you@example.com>"]

[workspace.dependencies]
dioxus = { version = "0.7.3", features = ["fullstack"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
deadpool-postgres = "0.14"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
strip = true
