[package]
name = "clarity-core"
version.workspace = true
edition.workspace = true

[dependencies]
dioxus.workspace = true
tokio.workspace = true
serde.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true