[package]
name = "clarity-core"
version.workspace = true
edition.workspace = true

[dependencies]
dioxus.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
deadpool-sqlx.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
moka.workspace = true
url = "2.5"
urlencoding = "2.1"
once_cell = "1.19"

[dev-dependencies]
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }

[features]
default = []
integration-tests = []
