[package]
name = "clarity-server"
version.workspace = true
edition.workspace = true

[dependencies]
clarity-core = { path = "../clarity-core" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures = "0.3"
mimalloc.workspace = true

[dev-dependencies]
tokio-test = "0.4"