[package]
name = "clarity-server"
version.workspace = true
edition.workspace = true

[dependencies]
clarity-core = { path = "../clarity-core" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tower-service.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures = "0.3"
mimalloc.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
utoipa = "4"
utoipa-swagger-ui = { version = "4", features = ["axum"] }
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"